--- a/c/privacy-policy/index.html
+++ b/c/privacy-policy/index.html
@@ -77,7 +77,7 @@
 
         <p class="linebreak"><em>Terms may be updated without notice at the discretion of OAFA.</em></p>
       </div>
-      
+
     </article><br class="clear">
   </section>
 
@@ -85,7 +85,7 @@
     <div class="quote" id="footnotes">
       <p class="small"><sup>1</sup> You may not use a false e-mail address, impersonate any person or entity. Registers are secured in a third-party service, and in compliance with its policies:</p>
       <div>
-        <p class="small">Art and design, and elephants. (<a href="../../url/c/campaignmonitor-policies/" rel="noopener" target="_blank" title="Campaign Monitor / Policies">Campaign Monitor</a>)</p>
+        <p class="small">Art and story&hellip; And elephants. (<a href="../../url/c/campaignmonitor-policies/" rel="noopener" target="_blank" title="Campaign Monitor / Policies">Campaign Monitor</a>)</p>
         <!--p class="small">Last of the Big Tuskers. ()</p-->
 
       </div>
