--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -125,7 +125,7 @@
 
         <p class="linebreak">Please use a traceable carrier and retain the tracking number for your records.</p>
 
-        <p class="linebreak">OAFA Boutique will take care of the rest! Once your return is received and inspected by the fulfillment centers (usually within two (2) days of receipt), your refund will be processed and a credit will be automatically applied to your credit card or original method of payment within seven (7) days. Please note that depending on your credit card company, it may take an additional two (2) to ten (10) business days after your credit is applied for it to post to your account.</p>
+        <p class="linebreak">OAFA Boutique will take care of the rest! Once your return is received and inspected by the fulfillment centres (usually within two (2) days of receipt), your refund will be processed and a credit will be automatically applied to your credit card or original method of payment within seven (7) days. Please note that depending on your credit card company, it may take an additional two (2) to ten (10) business days after your credit is applied for it to post to your account.</p>
 
         <h5 class="linebreak title" id="warranty"><b>4.1</b> Warranty</h5>
         <p>OAFA Boutique prints carry a limited thirty (30) day warranty on manufacturer defects. Original artwork is not covered by warranty.</p>
@@ -144,7 +144,7 @@
 
         <h5 class="linebreak">Thanks for supporting wildlife art with your Order from Animat Habitat boutique.</h5>
       </div>
-      
+
     </article><br class="clear">
   </section>
 
