--- a/scene/one/book-of-ella-2-2/index.html
+++ b/scene/one/book-of-ella-2-2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -47,9 +49,9 @@
         <p>The panel in a comic book functions as a stage for the artist to direct the point of view in each moment. The border of a panel acts as a peripheral field of view of the reader, and the shape of a panel outlined by the border &ndash; or the absence of a border &ndash; is an opportunity to establish perspective for each scene. A narrow panel may evoke the feeling of limitation or confinement, whereas a wide panel may evoke the feeling of open space or escape. The shape of the panel in combination with perspective may be used to promote these primitive feelings because we are responsive to our environment. This directionality enables the artist to clarify action in the story, to orient the reader in place and time, and to evoke an emotional response and so on. There is an entire chapter about the frame in <em>Comics and Sequential Art: Principles and Practices from the Legendary Cartoonist</em>, in which Will Eisner shares a perspective of the comic panel in a literal context:</p>
 
         <div>
-          <p>&ldquo;In comics, there are actually two frames: the total page (or screen, in digital comics), on which there are any number of panels, and the panel itself, within which the narrative action unfolds. They are the controlling devices in sequential art.&rdquo;</p>
+          <p><b class="color">&ldquo;</b>In comics, there are actually two frames: the total page (or screen, in digital comics), on which there are any number of panels, and the panel itself, within which the narrative action unfolds. They are the controlling devices in sequential art.<b class="color">&rdquo;</b></p>
 
-          <!-- &mdash;&nbsp;Eisner, 2008, <em>Comics and Sequential Art</em>, p. 41-->
+          <!-- &mdash;&nbsp;Eisner, 2008, <em>Comics and Sequential Art</em>, p. 41 -->
 
         </div>
       </div>
@@ -75,6 +77,7 @@
 
       <div>
         <p>Panels are typically rectangular, historically rigid and repeated as a natural extension of the comic strip format of the newspapers wherein the medium arrived. The most basic panel layout, in which both the shape and size of the panel stay the same, acts to contain the view of the reader, nothing more. The added framing of a single, consistent perspective in a sequence of similar panels is a way to make clear the change in the scene within the panel.</p>
+
       </div>
 
       <div class="clear diptych ptych-fixed">
@@ -95,7 +98,7 @@
         <p>Alternatively, the comic book &ndash; and the digital comic &ndash; has a capacity to apply panels with angled borders and cut-out shapes that may suggest a context, an inflection or a movement in a sequence of a story. Eisner also looked at the comic panel in a figurative context:</p>
 
         <div>
-          <p>&ldquo;[The shape of a frame] can be used to convey something of the dimension of sound and emotional climate in which the action occurs, as well as contributing to the atmosphere of the page as a whole.&rdquo;</p>
+          <p><b class="color">&ldquo;</b>[The shape of a frame] can be used to convey something of the dimension of sound and emotional climate in which the action occurs, as well as contributing to the atmosphere of the page as a whole.<b class="color">&rdquo;</b></p>
 
           <!-- &mdash;&nbsp;Eisner, 2008, <em>Comics and Sequential Art</em>, p. 45-->
 
@@ -128,6 +131,7 @@
 
         <h3 class="linebreak">The Word</h3>
         <p>Words and pictures have a special relationship in comics. The two can combine or conflict with dramatic effect. Both can intersect, and each is interdependent. Sometimes the two are set in parallel paths. Sometimes the two are mixed together in a montage. Words and pictures share a common purpose and a common heritage as graphic symbols.</p>
+
       </div>
 
       <img alt="Buz Sawyer &ndash; (January 16, 1978) &copy; Roy Crane" src="https://animathabitat.com/inc/img/~01/comic/roy-crane/buz-sawyer.1978.01.16.jpg" />
@@ -137,18 +141,22 @@
         <p>Roy Crane, the creator of <em>Captain Easy</em> (comic strip, July 1933 - October 1988) and <em>Buz Sawyer</em> (comic strip, November 1943 - October 1989), is credited as a pioneer of the use of onomatopoeic sound effects in comics, adding &ldquo;bam&rdquo; and &ldquo;pow&rdquo; and so on to what had previously been an almost entirely written word.</p>
 
         <p class="linebreak">The onomatopoeia has developed as a special effect in comics, in particular as a result of the picture-like immediacy of short bold words. Lettering and a handwritten script has a capacity to evoke sound with variation in letterforms, as well as a capacity to arrange letters to simulate sounds with words not found in the dictionary. Furthermore, art in comics has a capacity to appropriate the pictorial quality of letters and words. Scott McCloud wrote about the power of the word in comics in his book about making comics, <em>Making Comics: Storytelling Secrets of Comics, Manga and Graphic Novels</em> (2006). McCloud wrote:</p>
+
         <div>
-          <p>&ldquo;Words evoke feelings, sensations and abstract concepts[;] they're comics' only traditional link with the warmth and nuance of human life. They offer comics creators the opportunity to compress and expand time, and when words and pictures work interdependently, they can create new ideas and sensations beyond the sum of their parts.&rdquo;</p></div>
+          <p><b class="color">&ldquo;</b>Words evoke feelings, sensations and abstract concepts[;] they're comics' only traditional link with the warmth and nuance of human life. They offer comics creators the opportunity to compress and expand time, and when words and pictures work interdependently, they can create new ideas and sensations beyond the sum of their parts.<b class="color">&rdquo;</b></p>
+
+        </div>
 
         <p>The use of iconography to represent texture and character of sound in comics, even in print, is an attempt to embrace more than its visual medium. The onomatopoeic sound effect can be indicated by size and boldness and so on, by the graphic quality: the shape, line and color of the sound&mdash;the roughness, waviness, sharpness, fuzziness and so on, and by association of font styles and shapes that reference or mimic the source of the sound. McCloud, in his talk in 2005, elaborated on the meaning of this abstraction in comics:</p>
+
         <div>
-          <p>&ldquo;One of the most important things about comics [is] that comics are a visual medium but they try to embrace all the senses within it. So, the different elements of comics like pictures and words, and the different symbols, and everything in between that comics presents are all funneled through the single conduit of vision. So we have things like resemblance, where [&hellip;] something which resembles the physical world can be abstracted in a couple of different directions: abstracted from resemblance but still retaining the complete meaning, or abstracted away from both resemblance and meaning.&rdquo;</p>
+          <p><b class="color">&ldquo;</b>One of the most important things about comics [is] that comics are a visual medium but they try to embrace all the senses within it. So, the different elements of comics like pictures and words, and the different symbols, and everything in between that comics presents are all funneled through the single conduit of vision. So we have things like resemblance, where [&hellip;] something which resembles the physical world can be abstracted in a couple of different directions: abstracted from resemblance but still retaining the complete meaning, or abstracted away from both resemblance and meaning.<b class="color">&rdquo;</b></p>
 
         </div>
 
         <p>McCloud then looked to &ldquo;language&rdquo; down that logical line, and explained that the written word is, &ldquo;abstracting even further from resemblance but still maintaining meaning.&rdquo;</p>
 
-        <p class="linebreak">Scott McCloud: <em>The Visual Magic of Comics</em> (talk, 2005) and <em>Making Comics</em> (book, 2006) by Scott McCloud are just two articles in a career crammed with contribution to the advancement of the craft of making comics. A final example, here, another celebrated cartoon and cartoonist: <em>Garfield</em> (comic strip, 1978 - present) was created by Jim Davis. The comic strip is one of the most widely syndicated in the world. Finally, where is there space for elephants? <em>White Elephant</em> is designed as a single issue comic book, and as part of a limited series of scenes in wildlife art. The limited series is developed with a companion app to move the art and story into a widely shared marketplace: the App Store, and the art and story is directed to maintain a connection with a history of comics.</p>
+        <p class="linebreak">Scott McCloud: <em>The Visual Magic of Comics</em> (talk, 2005) and <em>Making Comics</em> (book, 2006) by Scott McCloud are just two articles in a career crammed with contribution to the advancement of the craft of making comics. A final example, here, another celebrated cartoon and cartoonist: <em>Garfield</em> (comic strip, 1978 - present) was created by Jim Davis. The comic strip is one of the most widely syndicated in the world. Finally, where is there space for elephants? <em>White Elephant</em> is designed as a single issue comic book, and as part of a limited series of scenes in wildlife art. The limited series is developed with a companion app to move the art and story into a widely shared marketplace: the App Store, and the art and story is directed to maintain a connection with the history of comics.</p>
 
       </div>
 
