--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -13,14 +13,14 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -51,12 +51,12 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color">&ldquo;</font><em>Story is all around us; it's everywhere; it's your life. Whatever happens to you throughout the day, throughout the week: that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Rick del Carmen. (2016) <em>The Bancroft Brothers Animation Podcast</em>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen. (2016) <em>The Bancroft Brothers Animation Podcast</em>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
 
       </div>
 
       <div>
-        <p><em>If the part you play in <em>story</em> is unclear, &lsquo;keep looking, and don't settle.&rsquo; In the words of Steve Jobs in the 2005 commencement address to Stanford University: &ldquo;The only way to do great work is to love what you do. If you haven't found it yet: keep looking, and don't settle.&rdquo; Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><em>White Elephant</em></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</em></p>
+        <p><em>Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><em>White Elephant</em></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</em></p>
 
         <h3 class="linebreak">Our Story</h3>
         <p>Story at Animat Habitat is written in the context of challenges that people must take on today and in future&mdash;in a moment in human history when we have clear cause-and-effect on the state of the natural world. We the people enact our story together. Action!</p>
@@ -83,6 +83,7 @@
       </div>
 
       <img alt="White Elephant Thank you cards. (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.card.banner.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> cover art cards (2015)</p>
 
       <div>
         <p><em>And one more thing&hellip;</em></p>
@@ -92,7 +93,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color">&ldquo;</font><em>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Dr Seuss: The Once-ler, <em>The Lorax</em> (1971)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Once-ler, <em>The Lorax</em> (1971)</font></h4>
 
       </div>
 
@@ -107,7 +108,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color">&ldquo;</font><em>I speak for the trees, for the trees have no tongues.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Dr Seuss: The Lorax, <em>The Lorax</em> (1971)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>I speak for the trees, for the trees have no tongues.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Lorax, <em>The Lorax</em> (1971)</font></h4>
 
       </div>
 
