--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -49,14 +51,9 @@
 
       </div>
 
-      <br>
-
-      <div class="desktop-feature">
-        <div class="clear ptych-center">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/photo/museum-of-natural-history.marseille.elephant-skeleton.jpg" />
-          <p class="text-right">Elephant skeleton, Museum of Natural History, Marseille</p>
-
-        </div>
+      <div class="center">
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/museum-of-natural-history.marseille.elephant-skeleton.jpg" />
+        <p class="text-right gutter-side">Elephant skeleton, Museum of Natural History, Marseille</p>
 
       </div>
 
@@ -82,6 +79,19 @@
         <p class="linebreak"><em>No one needs a tusk other than an elephant.</em></p>
 
       </div>
+
+<!-- Body and Mind, Steve Bloom
+
+Elephants have their own built-in-air-conditioning systems, and cool by flapping each year like a fan. As the day cruise hotter, the tempo increases.
+When it is windy, they save energy by standing with their backs to the grease and spread out their ears to catch the moving air.
+
+The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.
+
+Wild elephants are under huge pressure from an expanding human population that has squeezed them into smaller and smaller reserves, encroaching on habitat and breaking up traditional migratory routes.
+
+Periodically adult male elephants enter the state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain, attacking randomly. Body temperatures rise, and they flap their ears frequently to keep a cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight, including humans, and the danger of such a state should never be underestimated. In the wild, musth Helps the elephant to maintain his dominant position and meet with females who are in season.
+
+In normal elephant society, a matriarch is in control of the group, passing on survival skills to the young. Juvenile males are taught how to deal with the range of situations, and stay with her until adolescence. At this stage: they generally leave the herd and attach themselves to order bowls who, by example, guide them into the ways of adulthood. Musth May appear in younger bowls for short periods, but his suppressed in the presence of older, more dominant males. Without these Dominic males, must may become uncontrollable and completely take over the behavior of young bulls. -->
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>An elephant's appetite is prodigious. They eat roughly four percent of their body weight each day, so a five tonne elephant will eat some 200 kilograms of vegetation. A natural consequence of this is the production of copious quantities of dung &ndash; on average each elephant produces roughly one tonne of natural organic manure every week, packed with nutrients, that feeds countless insects and enriches the soil of their habitat. When they have been feeding on fruits or pods, their dung is also packed with seeds, all deposited miles from the parent plant and protected from weevils and other seed predators. in so doing, elephants effectively sow the next generation of trees, each seedling getting a good start in life growing in rich compost. Trees with small seeds can also have them dispersed by fruit-eating birds, primates and antelopes, but those species with big seeds need big seed-dispersal agents. Elephants disperse more seeds and more species, over longer distances, than any other animal. This is why ecologists have dubbed them the &lsquo;mega-gardeners of the forest&rsquo;.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ian Redmond Obe, Ambassador for UNEP Convention on Migratory Species, Consultant for Born Free Foundation, <em>Remembering Elephants</em> (book, 2016), Envisage Books</font></h4>
@@ -137,7 +147,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/photo/swt.tsavo-02.jpg" />
-        <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT <a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
+        <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
       </div>
 
