--- a/scene/one/elephant-charter/index.html
+++ b/scene/one/elephant-charter/index.html
@@ -13,14 +13,14 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -41,12 +41,12 @@
         <h2 class="scene-one">A History of Elephants (Charter)</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
-        <p class="linebreak"><em>From <a href="../../../url/-info/theelephantcharter/" title="The Elephant Charter" target="_blank" rel="noopener">The Elephant Charter</a>&mdash;from Joyce Poole and Petter Granli of <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">ElephantVoices</a> partnered with key elephant social behavior experts, and from a growing conviction held by elephant biologists that elephants are deserving of some form of Bill of Rights. Authors Joyce Poole, Cynthia Moss, Raman Sukumar, Andrea Turkalo and Katy Payne together with other scientists and researchers have contributed their time, expertise and support to further development of the document.</em></p>
+        <p class="linebreak"><em>From <a href="../../../url/-info/theelephantcharter/" title="The Elephant Charter" target="_blank" rel="noopener">The Elephant Charter</a>&mdash;from Joyce Poole and Petter Granli of <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">ElephantVoices</a> partnered with key elephant social behavior experts, and from a growing conviction held by elephant biologists that elephants are deserving of some form of Bill of Rights. Authors Joyce Poole, Cynthia Moss, Raman Sukumar, Andrea Turkalo and Katy Payne, together with other scientists and researchers, have contributed their time, expertise and support to further development of the document.</em></p>
 
-        <p class="linebreak"><em>This article shares a collection of principles for elephant conservation. These principles are a verbatim republication of The Elephant Charter, with direct links to further principles from its official online publication. The official website makes The Elephant Charter available in many languages, including French and Afrikaans and so on. So, here is a history of elephants presented with principles and evidence from elephant social behaviour experts, elephant biologists and other scientists and so on.</em></p>
+        <p class="linebreak"><em>This article shares a collection of principles for elephant conservation. These principles are a verbatim republication of The Elephant Charter, with direct links to further principles from its official online publication. The official website makes The Elephant Charter available in many languages, including French and Afrikaans. So, here is a history of elephants presented with principles and evidence from elephant social behaviour experts, elephant biologists and other scientists and so on.</em></p>
 
         <h3 class="linebreak" id="principle-1-header">I: Conservation of Elephants</h3>
-        <p>The survival and well being of elephants is threatened by escalating poaching for the commercial trade in ivory and meat, the increasing loss and fragmentation of natural habitats, and by locally increasing conflict with humans over diminishing resources. These threats are fuelled by a growing market for ivory in Asia, by poverty and civil unrest, and exacerbated by misguided public policy.</p>
+        <p>The survival and well-being of elephants is threatened by escalating poaching for the commercial trade in ivory and meat, by the increasing loss and fragmentation of natural habitats, and by locally increasing conflict with humans over diminishing resources. These threats are fuelled by a growing market for ivory in Asia, by poverty and civil unrest, and exacerbated by misguided public policy.</p>
 
         <div class="clear" id="principle-1-h">
           <p class="linebreak">Evidence: <a class="color" onclick="principle_1();">Conservation of Elephants</a>.</p></div>
@@ -54,7 +54,7 @@
         <div id="principle-1">
           <ul class="lower-roman">
             <li>Since the origin of elephants, about 60 million years ago, the order Proboscidea has consisted of approximately 10 families, 45 genera and 185 species and subspecies, in an extraordinary array of forms. The African and Asian elephants existing today are the sole remnants of that spectacular radiation.</li>
-            <li>Recent classification recognizes three contemporary elephants species: Asian elephants, <em>Elephas maximus</em>, African savannah elephants, <em>Loxodonta africana</em>, and African forest elephants, <em>Loxodonta cyclotis</em>, however not all scientists agree on this taxonomy.</li>
+            <li>Recent classification recognizes three contemporary elephant species: Asian elephants, <em>Elephas maximus</em>, African savannah elephants, <em>Loxodonta africana</em>, and African forest elephants, <em>Loxodonta cyclotis</em>, however not all scientists agree on this taxonomy.</li>
             <li>The remaining elephants represent a tiny fraction of their former numbers, inhabiting only a small portion of their previous range; their distribution is highly fragmented. In many areas, particularly in Asia and in Central and West Africa, elephant populations have already gone extinct or are highly endangered.</li>
             <li>Fuelled by poverty, political instability, civil unrest and the demand for luxury consumption of ivory products, elephants in their natural habitats are threatened by poaching for the commercial ivory and game meat trade.</li>
             <li>Poaching is the cause of enormous losses to the species as well as suffering to individuals, fragmenting populations and destroying families. Among Asian elephants, where only a small percentage of males have tusks, even sub-adult and juvenile male tuskers are targeted causing trauma to elephant families. In African elephants, where the tusks of males average seven times the weight of female tusks, poaching is focused on males, though in heavily poached populations females and even sub-adults are killed for their tusks, disrupting families. Older elephants are prized for their heavier tusks; the removal of older males impacts sexual selection, while the removal of older females impoverishes social and ecological knowledge, thereby reducing individual reproductive success and survival.</li>
@@ -64,7 +64,7 @@
           <p class="linebreak">Close evidence: <a class="color" onclick="principle_1();">Conservation of Elephants</a>.</p></div>
 
         <h3 class="linebreak" id="principle-2-header">II: Co-existence with Elephants</h3>
-        <p>Rapidly expanding human populations, increasing levels of human consumption and the technologically enabled incursion of human activities into areas previously remote or uninhabited by people is causing the depletion and fragmentation of traditional elephant habitat, conflict and loss of life.</p>
+        <p>Rapidly expanding human populations, increasing levels of human consumption, and the technologically enabled incursion of human activities into areas previously remote or uninhabited by people are all causing the depletion and fragmentation of traditional elephant habitat, conflict and loss of life.</p>
 
         <div class="clear" id="principle-2-h">
           <p class="linebreak">Evidence: <a class="color" onclick="principle_2();">Co-existence of People and Elephants</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="The Elephant Charter, Management and Welfare of Elephants">1</a>, <a class="button" onclick="fn();" title="The Elephant Charter, Management and Welfare of Elephants Held Captive">2</a>]</sup></p></div>
@@ -74,14 +74,14 @@
             <li>The conflict between elephants and people has two sides; humans face senseless suffering, loss of life and property and elephants suffer injuries and mortalities which impact the fabric of their societies. Promoting co-existence requires understanding the needs and perspectives of both people and elephants.</li>
             <li>The root causes of the conflict are poor land use, driven by increasing human populations and unsustainable consumption of natural resources, resulting in fragmentation of habitat, as well as the cultivation of crops attractive to elephants adjacent to their natural habitats.</li>
             <li>The management of conflict between elephants and people has tended to focus on mitigating its symptoms, through barriers, deterrents and early warning systems, rather than eliminating or managing its ultimate causes.</li>
-            <li>The development and implementation of sensible land use planning that takes account of the collective needs of people and elephants is essential to reducing and preempting long-term conflict and promoting peaceful co-existence. Some forms of land-use are less compatible with the presence of elephants than others. In some areas elephants may have to be removed, in other areas people may have to be moved.</li>
+            <li>The development and implementation of sensible land use planning that takes account of the collective needs of people and elephants is essential to reducing and preempting long-term conflict and promoting peaceful co-existence. Some forms of land use are less compatible with the presence of elephants than others. In some areas elephants may have to be removed, in other areas people may have to be moved.</li>
             <li>Continued destruction of forests, haphazard settlement and construction of roads and railways in elephant habitat, and the indiscriminate use and depletion of natural water sources is fragmenting elephant range further and leading to increased conflict.</li></ul>
 
           <p class="linebreak">Close evidence: <a class="color" onclick="principle_2();">Co-existence of People and Elephants</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="The Elephant Charter, Management and Welfare of Elephants">1</a>, <a class="button" onclick="fn();" title="The Elephant Charter, Management and Welfare of Elephants Held Captive">2</a>]</sup></p>
         </div>
 
         <h3 class="linebreak" id="principle-3-header">III: Space for Elephants</h3>
-        <p>Elephants are intelligent and vigorous creatures that have evolved in an extensive and complex physical and social environment. Adapted to vast areas, the continuous larger and smaller scale movements related to the search for food, water, companions and mates are essential for elephant well being.</p>
+        <p>Elephants are intelligent and vigorous creatures that have evolved in an extensive and complex physical and social environment. Adapted to vast areas, the continuous larger and smaller scale movements related to the search for food, water, companions and mates are essential for elephant well-being.</p>
 
         <!-- Elephants require sustained, biologically relevant activities for body and mind. We are obliged to account for this and the consequent necessity of large space for elephants in the wild and sufficient space in captivity. -->
 
@@ -158,7 +158,7 @@
 
         <!-- Family members play a crucial socializing and bonding role in the birth and development of elephant calves. The presence of mother and family is essential for the survival and the normal, healthy development of elephant calves. Without these relationships elephants grow up socially incompetent and the lasting effects of trauma suffered by elephants may translate into a cycle of violence directed toward human beings and other unusual objects of aggression. -->
 
-        <!-- We deprive elephants and harm their emotional well being when we deny them access to a range of social partners; our treatment of elephants should recognize and protect their highly social character. We psychologically deprive and harm elephants when we separate or kill members of an elephant family or a close social group; our treatment of wild and captive elephants must recognize and protect the integrity of close social relationships. We harm elephants when through human intervention we break close social bonds; in particular our management practices must strive not to break the bonds between mothers and their offspring. -->
+        <!-- We deprive elephants and harm their emotional well-being when we deny them access to a range of social partners; our treatment of elephants should recognize and protect their highly social character. We psychologically deprive and harm elephants when we separate or kill members of an elephant family or a close social group; our treatment of wild and captive elephants must recognize and protect the integrity of close social relationships. We harm elephants when through human intervention we break close social bonds; in particular our management practices must strive not to break the bonds between mothers and their offspring. -->
 
         <div class="clear" id="principle-6-h">
           <p class="linebreak">Evidence: <a class="color" onclick="principle_6();">Social Needs</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="The Elephant Charter, Family Ties">3</a>, <a class="button" onclick="fn();" title="The Elephant Charter, Male Elephant Social Relationships and Musth">4</a>]</sup></p>
@@ -245,7 +245,7 @@
 
       <div>
         <h3>Abstract</h3>
-        <p>Elephants as a species and as individuals have an intrinsic right to exist. We have an obligation to protect elephants and their habitats and to ensure their well being and continued survival in the face of human exploitation, encroachment and interference. If we wish elephants to survive we must bring a halt to the commercial trade in ivory and make major adjustments in public policies so as to reduce conflict and promote peaceful coexistence. We must minimise the causes of conflict and promote the peaceful co-existence of people and elephants to ensure the survival of elephants and reduce suffering. Good governance in elephant range states is essential to success in this endeavor.</p>
+        <p>Elephants as a species and as individuals have an intrinsic right to exist. We have an obligation to protect elephants and their habitats and to ensure their well-being and continued survival in the face of human exploitation, encroachment and interference. If we wish elephants to survive we must bring a halt to the commercial trade in ivory and make major adjustments in public policies so as to reduce conflict and promote peaceful coexistence. We must minimise the causes of conflict and promote the peaceful co-existence of people and elephants to ensure the survival of elephants and reduce suffering. Good governance in elephant range states is essential to success in this endeavor.</p>
 
         <p class="linebreak">Elephants exhibit an interest in their own lives and empathy for those to whom they are attached. They have an intrinsic right to experience a life of well-being. Through human imagination and our scientific and creative abilities, we can and must curb our demand for the natural resources of the planet and, wherever possible, reduce our reliance on cruel and invasive elephant management practices. We harm and deprive elephants when through interventive management practices we deny them the opportunity for social learning. We must protect their highly social character and allow elephants to acquire the full range of elephant behavior in a normal social context. We damage the fabric of elephant society when we remove older individuals. Our management of wild elephants must reflect the importance of older males and females in maintaining the integrity of elephant society. We have an obligation to maintain the integrity of ecosystems that elephants inhabit, and must take realistic account of the needs of elephants in the planning and management of protected areas and landscapes.</p>
 
