--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -41,13 +43,13 @@
         <h2 class="scene-one">Elephant Conservation in Africa</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
-        <p class="linebreak"><em>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</em></p>
+        <p class="linebreak"><em>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Mark Deeble">1</a>]</sup></p>
 
         <p class="linebreak"><em>From another continent, it is unfair to place a value on such a loss for Kenya and on such widespread biodiversity loss across Africa without also addressing the impact of pollutants emitted and wasted by the rest of the world. This article points to Satao as an ambassador for the crisis facing elephant conservation in Africa, but also to the ways the world can help create change from home.</em></p>
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/mark-deeble/2014.satao.bull-drinking.png" />
-      <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; <a title="Mark Deeble" href="../../../url/wp/markdeeble/" target="_blank" rel="noopener">Mark Deeble</a></p>
+      <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
         <h3>Change in Africa</h3>
@@ -62,7 +64,7 @@
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/mark-deeble/2014.satao.dead-and-splayed.png" />
-      <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Mark Deeble</a></p>
+      <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
         <p>The Tsavo bull was killed for his ivory in late May 2014.</p>
@@ -92,25 +94,25 @@
 
       <div>
         <h4>African Impact</h4>
-        <p>African Impact hosts a range of conservation volunteering across south-west Africa, including a hands-on elephant and rhino program in <a title="African Impact / Hands-on Wildlife Conservation Project" href="../../../url/-com/africanimpact-hands-on-elephant-rhino-and-wildlife-conservation-project" target="_blank" rel="noopener">Zimbabwe</a>. The emphasis is wildlife conservation, with time spent in the game park as well as educating the community on the importance of the environment and its wildlife. <a title="African Impact / Conservation Volunteering" href="../../../url/-com/africanimpact-conservation-volunteering/" target="_blank" rel="noopener">Volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="African Impact">1</a>]</sup></p>
+        <p>African Impact hosts a range of conservation volunteering across south-west Africa, including a hands-on elephant and rhino program in <a title="African Impact / Hands-on Wildlife Conservation Project" href="../../../url/-com/africanimpact-hands-on-elephant-rhino-and-wildlife-conservation-project" target="_blank" rel="noopener">Zimbabwe</a>. The emphasis is wildlife conservation, with time spent in the game park as well as educating the community on the importance of the environment and its wildlife. <a title="African Impact / Conservation Volunteering" href="../../../url/-com/africanimpact-conservation-volunteering/" target="_blank" rel="noopener">Volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="African Impact">2</a>]</sup></p>
 
       </div>
 
       <div>
         <h4>David Shepherd Wildlife Foundation</h4>
-        <p>DSWF fund anti-poaching teams and undercover investigations into criminal networks, &ldquo;to protect wildlife species and to establish a sustainable future for them in the wild.&rdquo; David Shepherd and other leading wildlife artists sell <a title="David Shepherd / Shop" href="../../../url/-org/davidshepherd-shop/" target="_blank" rel="noopener">prints and gift cards</a> on the site to help fund the foundation. Good idea!<sup>&nbsp;[<a class="button" onclick="fn();" title="DSWF">2</a>]</sup></p>
+        <p>DSWF fund anti-poaching teams and undercover investigations into criminal networks, &ldquo;to protect wildlife species and to establish a sustainable future for them in the wild.&rdquo; David Shepherd and other leading wildlife artists sell <a title="David Shepherd / Shop" href="../../../url/-org/davidshepherd-shop/" target="_blank" rel="noopener">prints and gift cards</a> on the site to help fund the foundation. Good idea!<sup>&nbsp;[<a class="button" onclick="fn();" title="DSWF">3</a>]</sup></p>
 
       </div>
 
       <div>
         <h4>International Elephant Foundation</h4>
-        <p>IEF are working in <a href="../../../url/-org/elephantconservation-mounted-horse-patrol-anti-poaching-kenya/" title="IEF / Anti-poaching, Kenya" target="_blank" rel="noopener">Kenya</a>, <a href="../../../url/-org/elephantconservation-minimize-illegal-killing-of-elephants/" title="IEF / Minimize Illegal Killing, Kenya and Tanzania" target="_blank" rel="noopener">Tanzania</a>, <a href="../../../url/-org/elephantconservation-conservation-of-elephants-uganda/" title="IEF / Conservation of Elephants, Uganda" target="_blank" rel="noopener">Uganda</a> and <a href="../../../url/-org/elephantconservation-village-scout-support-lower-zambezi/" title="IEF / Village Scout Support, Lower Zambezi" target="_blank" rel="noopener">Lower Zambezi</a> to increase the presence of security personnel for elephant monitoring and anti-poaching projects within the Serengeti ecosystem. Their vision is to create a sustainable future for elephants, by linking people and elephants for their mutual long-term benefit.<sup>&nbsp;[<a class="button" onclick="fn();" title="IEF">3</a>]</sup></p>
+        <p>IEF are working in <a href="../../../url/-org/elephantconservation-mounted-horse-patrol-anti-poaching-kenya/" title="IEF / Anti-poaching, Kenya" target="_blank" rel="noopener">Kenya</a>, <a href="../../../url/-org/elephantconservation-minimize-illegal-killing-of-elephants/" title="IEF / Minimize Illegal Killing, Kenya and Tanzania" target="_blank" rel="noopener">Tanzania</a>, <a href="../../../url/-org/elephantconservation-conservation-of-elephants-uganda/" title="IEF / Conservation of Elephants, Uganda" target="_blank" rel="noopener">Uganda</a> and <a href="../../../url/-org/elephantconservation-village-scout-support-lower-zambezi/" title="IEF / Village Scout Support, Lower Zambezi" target="_blank" rel="noopener">Lower Zambezi</a> to increase the presence of security personnel for elephant monitoring and anti-poaching projects within the Serengeti ecosystem. Their vision is to create a sustainable future for elephants, by linking people and elephants for their mutual long-term benefit.<sup>&nbsp;[<a class="button" onclick="fn();" title="IEF">4</a>]</sup></p>
 
       </div>
 
       <div>
         <h4>Elephant-Human Relations Aid</h4>
-        <p>EHRA enables volunteers to reduce conflict between elephants and humans through movement monitoring, data management, water protection and education programs. The <a title="EHRA / Desert Elephants, Namibia" href="../../../url/-org/ehranamibia-elephant-conservation/" target="_blank" rel="noopener">Namibia-based</a> team take great interest in the desert elephants, and if you too are ready for an adventure in the Africa: <a title="EHRA / Wildlife Volunteer" href="../../../url/-org/ehranamibia-volunteer-with-elephants-namibia/" target="_blank" rel="noopener">volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="EHRA">4</a>]</sup></p>
+        <p>EHRA enables volunteers to reduce conflict between elephants and humans through movement monitoring, data management, water protection and education programs. The <a title="EHRA / Desert Elephants, Namibia" href="../../../url/-org/ehranamibia-elephant-conservation/" target="_blank" rel="noopener">Namibia-based</a> team take great interest in the desert elephants, and if you too are ready for an adventure in the Africa: <a title="EHRA / Wildlife Volunteer" href="../../../url/-org/ehranamibia-volunteer-with-elephants-namibia/" target="_blank" rel="noopener">volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="EHRA">5</a>]</sup></p>
 
       </div>
 
@@ -121,11 +123,11 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-
-          <p class="small"><sup>1</sup> African Impact. <a title="African Impact" href="../../../url/-com/africanimpact/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>2</sup> David Shepherd Wildlife Foundation. Fighting wildlife crime. <a title="David Shepherd / Fighting Wildlife Crime" href="../../../url/-org/davidshepherd-fighting-wildlife-crime/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>3</sup> International Elephant Foundation. <a title="International Elephant Foundation" href="../../../url/-org/elephantconservation/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>4</sup> Elephant-Human Relations Aid. <a title="Elephant-Human Relations Aid" href="../../../url/-org/ehranamibia/" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a title="Mark Deeble" href="../../../url/wp/markdeeble/" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>2</sup> African Impact. <a title="African Impact" href="../../../url/-com/africanimpact/" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>3</sup> David Shepherd Wildlife Foundation. Fighting wildlife crime. <a title="David Shepherd / Fighting Wildlife Crime" href="../../../url/-org/davidshepherd-fighting-wildlife-crime/" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>4</sup> International Elephant Foundation. <a title="International Elephant Foundation" href="../../../url/-org/elephantconservation/" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>5</sup> Elephant-Human Relations Aid. <a title="Elephant-Human Relations Aid" href="../../../url/-org/ehranamibia/" target="_blank" rel="noopener">Website Link</a></p>
 
         </div>
       </div>
