--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src player.vimeo.com; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src player.vimeo.com; img-src animathabitat.com; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -63,7 +65,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color">&ldquo;</font><em>We believe that if conservation supports the people, then people will support conservation.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Big Life Foundation. Vision statement. [<a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">biglife.org</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>We believe that if conservation supports the people, then people will support conservation.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Big Life Foundation. Vision statement. [<a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">biglife.org</a>]</font></h4>
 
       </div>
 
@@ -80,7 +82,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color">&ldquo;</font><em>All across the African continent, there are entire populations of elephants and other animals now being wiped out. The list is long: animal populations in Chad, Central African Republic, Mozambique, Congo, large parts of Tanzania, and on and on. Tragically for many of the ecosystems in these places, any conservation group would face an overwhelming struggle to be effective&mdash;for lack of government support or community collaboration, for lack of money, for lack of firepower against the rebel militia groups that sweep in to murder en masse, financing weapons purchases with their bloody bounties of ivory.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Nick Brandt, <em>Across the Ravaged Land</em> (monograph, 2013), 10. Big Life Foundation</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>All across the African continent, there are entire populations of elephants and other animals now being wiped out. The list is long: animal populations in Chad, Central African Republic, Mozambique, Congo, large parts of Tanzania, and on and on. Tragically for many of the ecosystems in these places, any conservation group would face an overwhelming struggle to be effective&mdash;for lack of government support or community collaboration, for lack of money, for lack of firepower against the rebel militia groups that sweep in to murder en masse, financing weapons purchases with their bloody bounties of ivory.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Nick Brandt, <em>Across the Ravaged Land</em> (monograph, 2013), 10. Big Life Foundation</font></h4>
 
       </div>
 
@@ -108,7 +110,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color">&ldquo;</font><em>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
 
       </div>
 
@@ -117,13 +119,13 @@
         <p>The photography of Nick Brandt from his time in Amboseli speaks for itself, with each portrait speaking of a character in a story with an ending that gave life to Big Life Foundation. These photographs are collected in a trilogy of books documenting the disappearing animals of East Africa, altogether titled: <em>On This Earth, A Shadow Falls Across The Ravaged Land</em>. In the third and final volume, Nick returned to Amboseli for the first time in two years. This time, when he approached, Nick wrote in an essay on conservation, &ldquo;what had once been some of the most relaxed of elephant herds [&hellip;] they would run in terrified panic.&rdquo; This essay introduced the final volume of his trilogy: <em>Across The Ravaged Land</em>, and his words speak to the foundation of Big Life:</p>
 
         <div class="clear-bottom">
-          <p>&ldquo;Day by day, we tried to approach what had once been some of the most relaxed of elephant herds, elephants that in the past had quietly made their daily journey to the swamps, moving past and around our vehicle without a care in the world. But this time, when we approached to within half a mile, they would run in terrified panic. Meanwhile, gunshots were being reported from the direction that the elephants came, near the Tanzanian border.&rdquo;</p>
+          <p><b class="color">&ldquo;</b>Day by day, we tried to approach what had once been some of the most relaxed of elephant herds, elephants that in the past had quietly made their daily journey to the swamps, moving past and around our vehicle without a care in the world. But this time, when we approached to within half a mile, they would run in terrified panic. Meanwhile, gunshots were being reported from the direction that the elephants came, near the Tanzanian border.<b class="color">&rdquo;</b></p>
 
-          <p class="linebreak">&ldquo;We tried reporting what we'd seen, but nothing was done, nothing happened. The Kenya Wildlife Service was (and still is) underfunded, and the few NGOs in the area had insufficient funds and infrastructure to make much of a difference. On the Tanzanian side, there was no one at all engaged in protection or conservation.&rdquo;</p>
+          <p class="linebreak"><b class="color">&ldquo;</b>We tried reporting what we'd seen, but nothing was done, nothing happened. The Kenya Wildlife Service was (and still is) underfunded, and the few NGOs in the area had insufficient funds and infrastructure to make much of a difference. On the Tanzanian side, there was no one at all engaged in protection or conservation.<b class="color">&rdquo;</b></p>
 
-          <p class="linebreak">&ldquo;Over the next couple of months, the roll call of big bull elephants killed by poachers came thick and fast[&hellip;]. It wasn't just a case of <u>if</u> a big-tusked elephant was going to get killed, but <u>when</u>.&rdquo;</p>
+          <p class="linebreak"><b class="color">&ldquo;</b>Over the next couple of months, the roll call of big bull elephants killed by poachers came thick and fast[&hellip;]. It wasn't just a case of <u>if</u> a big-tusked elephant was going to get killed, but <u>when</u>.<b class="color">&rdquo;</b></p>
 
-          <p class="linebreak">&ldquo;I saw the destruction unfolding with almost no real or meaningful protection [&hellip;]. It is no good being angry and passive. It is much better to be angry and <u>active</u>.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Brandt, 2013">6</a>]</sup></p>
+          <p class="linebreak"><b class="color">&ldquo;</b>I saw the destruction unfolding with almost no real or meaningful protection [&hellip;]. It is no good being angry and passive. It is much better to be angry and <u>active</u>.<b class="color">&rdquo;</b><sup>&nbsp;[<a class="button" onclick="fn();" title="Brandt, 2013">6</a>]</sup></p>
 
         </div>
 
