--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -56,7 +58,7 @@
         <p>The seasonal rains travel to the Okavango delta by two main rivers: the steep Cubango river in the west and the more gradual Cuito river in the east. These rivers converge at the southern border of Angola to form the Okavango river. The Okavango river then flows through a strip in Namibia and into Botswana, spreading out into the vast basin, driving the dramatic seasonal expansion of life in the delta.</p>
 
         <div>
-          <p><font class="color">&ldquo;</font>It is the one-thousandth UNESCO World Heritage Site, and for its animals and immeasurable feeling of wilderness, it is a major tourist destination. [&hellip;] The delta has become a conservation beacon of possibility. It is what happens when people pay attention to the environmental wealth of a place, and instate protections, and as a result, the delta has prospered. <em>But not all residents have been included in its success.</em><font class="color">&rdquo;</font><font class="color"> &mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/1: &lsquo;Power to Protect&rsquo; (2021)</font></p>
+          <p><b class="color">&ldquo;</b>It is the one-thousandth UNESCO World Heritage Site, and for its animals and immeasurable feeling of wilderness, it is a major tourist destination. [&hellip;] The delta has become a conservation beacon of possibility. It is what happens when people pay attention to the environmental wealth of a place, and instate protections, and as a result, the delta has prospered. <em>But not all residents have been included in its success.</em><b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/1: &lsquo;Power to Protect&rsquo; (2021)</font></p>
 
         </div>
 
@@ -122,7 +124,7 @@
         <p><em>So there is something important to know about elephants&hellip;</em></p>
 
         <div>
-          <p><font class="color">&ldquo;</font>It is in an elephant’s nature to knock things down. They pull at branches, rip up tree roots, peel-off bark. This is how they find food. If their foraging space is small, they are destroyers, and will totally wreck a forest, but if the space is big, their damage can actually make a forest grow.<font class="color">&rdquo;</font><font class="color"> &mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021)</font></p>
+          <p><b class="color">&ldquo;</b>It is in an elephant’s nature to knock things down. They pull at branches, rip up tree roots, peel-off bark. This is how they find food. If their foraging space is small, they are destroyers, and will totally wreck a forest, but if the space is big, their damage can actually make a forest grow.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021)</font></p>
         </div>
 
         <p><em>Without elephants, the balance that we speak about is lost.</em></p>
@@ -208,13 +210,13 @@
             <p>River Bushmen are the first inhabitants of the delta, also known as San peoples, also known as BaSarwa. Then, there were smaller tribes of river people, like the WaYei (also written as baYeyi), and they were all in a way absorbed into the BaTawana&mdash;a tribe from the south with power, <em>and guns.</em> <u>Thalefang Charles</u>, Botswana photo-journalist, and Botswana producer of <em>Guardians of the River</em>, outlines the roots of tribal recognition in Botswana.</p>
 
             <div>
-              <p><font class="color">&ldquo;</font>The WaYei migrated to the delta from Angola in the early 1800s. It is clear they knew how to live on the rivers because of their fishing nets and their mokoros, and because there are records that they could tolerate living with malaria when so many others could not. <em>The water was their natural home.</em> At the same time that the WaYei arrived from the north, another tribe &ndash; the BaTawana &ndash; arrived from the south. The BaTawana were a larger population, and they were unaccustomed to life on the water. <em>They came from the desert.</em> And while it seems the WaYei should have had the upper hand in making the delta their home, the BaTawana had something else that the WaYei did not: guns.<font class="color">&rdquo;</font><font class="color"> &mdash;&nbsp;Thalefang Charles, <em>Guardians of the River</em> e/5: &lsquo;The Edge of Home&rsquo; (2021)</font></p>
+              <p><b class="color">&ldquo;</b>The WaYei migrated to the delta from Angola in the early 1800s. It is clear they knew how to live on the rivers because of their fishing nets and their mokoros, and because there are records that they could tolerate living with malaria when so many others could not. <em>The water was their natural home.</em> At the same time that the WaYei arrived from the north, another tribe &ndash; the BaTawana &ndash; arrived from the south. The BaTawana were a larger population, and they were unaccustomed to life on the water. <em>They came from the desert.</em> And while it seems the WaYei should have had the upper hand in making the delta their home, the BaTawana had something else that the WaYei did not: guns.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Thalefang Charles, <em>Guardians of the River</em> e/5: &lsquo;The Edge of Home&rsquo; (2021)</font></p>
             </div>
 
             <p>Ultimately, the BaTawana ruled the Okavango territory, and became its representative in the house of chiefs. They would determine land management, including some progressive conservation reforms. In 1963, in honor of a late BaTawana chief, the inner portion of the delta was declared as the Moremi game reserve, named after a BaTawana tribal leader and not anyone else, <em>like say the WaYei.</em></p>
 
             <div>
-              <p><font class="color">&ldquo;</font>A few things happened. First, the reserve was extended to include forty per cent of the Okavango delta area, and then the rest of the delta was further divided into eighteen wildlife management areas, and a controlled hunting area, which is patrolled by a community trust. These portions of land can be leased by tour operators or private entities, which is supposed to funnel money back to the communities. [&hellip;] The idea was that, yes, people will leave the delta, and yes, hunting will be regulated to protect the animals, but the people will also move to larger permanent villages and they will be given the power to manage community land trusts and to make money from that.<font class="color">&rdquo;</font><font class="color"> &mdash;&nbsp;Thalefang Charles, <em>Guardians of the River</em> e/5: &lsquo;The Edge of Home&rsquo; (2021)</font></p>
+              <p><b class="color">&ldquo;</b>A few things happened. First, the reserve was extended to include forty per cent of the Okavango delta area, and then the rest of the delta was further divided into eighteen wildlife management areas, and a controlled hunting area, which is patrolled by a community trust. These portions of land can be leased by tour operators or private entities, which is supposed to funnel money back to the communities. [&hellip;] The idea was that, yes, people will leave the delta, and yes, hunting will be regulated to protect the animals, but the people will also move to larger permanent villages and they will be given the power to manage community land trusts and to make money from that.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Thalefang Charles, <em>Guardians of the River</em> e/5: &lsquo;The Edge of Home&rsquo; (2021)</font></p>
             </div>
 
             <p>A national reserve designation required anyone in the delta to have a permit in order to hunt. However, there is reason to believe that the designation was also intended to preserve the cultural hunting heritage of the local people. <em>Botswana was different.</em> The tribal chiefs had donated the land. The BaTawana governed over how and why the area should be protected. The first and foremost tenant of the society was that conservation in and around the delta, &ldquo;took into consideration the rights, customs and requirements of the local African population.&rdquo;</em></p>
@@ -234,7 +236,7 @@
         <p class="linebreak">Tourism is big in the delta, and it is big for Botswana. However, designations to conserve the delta have had an unfortunate history of excluding some local tribes who know its rivers and its ecosystem most intimately. About a hundred-thousand tourists fill the Okavango lodges every year. And the iconic mokoro is their vessel for experiencing the delta. The inventors of the mokoro&mdash;the WaYei are not benefiting much from the delta, and yet their culture is appropriated for commercial tourism. Kerllen believes that the involvement of people like the WaYei is an important asset for the delta, and that it is important to recognize the local people for their contributions. Kerllen adds, &ldquo;and then make sure they also benefit from their wisdom, otherwise it will be lost, too.&rdquo; Some local tribes may know some mokoro &lsquo;pollers&rsquo; who have become certified guides, polling tourists in the delta. More often, the people in these smaller tribes are not benefiting from the commercial tourism industry. <em>The WaYei are not getting any royalties for their invention of the mokoro.</em></p>
 
         <div>
-          <p><font class="color">&ldquo;</font>If there was one symbol for the Okavango delta, it would be the mokoro. It is the ubiquitous human emblem of the region. A wooden dugout canoe invented by the WaYei&mdash;a local tribe that resides in Botswana on the outskirts of the Delta. The WaYei once used mokoros to fish, move from island to island&hellip; But as the Okavango delta gained international attention, the mokoro has taken on new meaning. They are everywhere. Posters. Pamphlets. Advertisements for the delta.<font class="color">&rdquo;</font><font class="color"> &mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/6: &lsquo;Koki's Plan&rsquo; (2021)</font></p>
+          <p><b class="color">&ldquo;</b>If there was one symbol for the Okavango delta, it would be the mokoro. It is the ubiquitous human emblem of the region. A wooden dugout canoe invented by the WaYei&mdash;a local tribe that resides in Botswana on the outskirts of the Delta. The WaYei once used mokoros to fish, move from island to island&hellip; But as the Okavango delta gained international attention, the mokoro has taken on new meaning. They are everywhere. Posters. Pamphlets. Advertisements for the delta.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/6: &lsquo;Koki's Plan&rsquo; (2021)</font></p>
 
           <!-- It is usually a mokoro filled with tourists pointing at lions and elephants on the shore. -->
 
@@ -279,7 +281,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-kavango/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Reconnaissance in Kavango /</font></a>
-          <!-- <a class="nav-next" href="../making-of-ella-4-2/" rel="next"><font class="mobile">Next Article /</font><font class="desktop">Making of Ella Ch.&nbsp;4 &ndash; P.&nbsp;2 /</font></a> -->
+          <!-- <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="mobile">Next Article /</font><font class="desktop">Making of Ella Ch.&nbsp;4 /</font></a> -->
         </div>
       </div>
 
