--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -45,7 +47,7 @@
 
       <div>
         <h3>2016 Ivory Burn, Kenya</h3>
-        <p>Nairobi&mdash;In April, the President of Gabon together with the President of Kenya set fire to 105 tons of elephant ivory and more than 1 ton of rhino horn (believed to be the largest stockpile ever destroyed) in a dramatic statement against the trade in ivory and products from endangered species. They say the pyres billowed thick plumes of white smoke over yellow flames that consumed the ivory. This was incited by about twenty thousand litres of jet fuel and oxygen. It was not known how long the burn would last because the burning of such a quantity was unprecedented. The stacks of tusks represented more than six-thousand seven-hundred (6,700) elephants killed for their ivory and three-hundred and forty (340) rhinos killed for their horns, plus endangered animal hides and skins and so on, sandalwood seizures and sacks full of Prunus Africana bark.<sup>&nbsp;[<a class="button" onclick="fn();" title="Zane, 2016">1</a>]</sup></p>
+        <p>Nairobi&mdash;In April, the President of Gabon, together with the President of Kenya, set fire to 105 tons of elephant ivory and more than 1 ton of rhino horn in a dramatic statement against the trade in ivory and products from endangered species. This is believed to be the largest stockpile ever destroyed. The conservationists who gathered from across the world to bear witness to the event describe pyres that billowed thick plumes of white smoke over yellow flames that consumed the ivory. This was ignited by about twenty thousand litres of jet fuel and oxygen. It was not known how long the burn would last because the burning of such a quantity was unprecedented. The stacks of tusks represented more than six-thousand seven-hundred (6,700) elephants killed for their ivory and three-hundred and forty (340) rhinos killed for their horns, plus endangered animal hides and skins and so on, sandalwood seizures and sacks full of Prunus Africana bark.<sup>&nbsp;[<a class="button" onclick="fn();" title="Zane, 2016">1</a>]</sup></p>
       </div>
 
       <div class="color quote">
@@ -60,15 +62,15 @@
       </div>
 
       <div>
-        <p>By setting the pyres ablaze the trophies have been placed beyond economic value. This has demonstrated to the world at large that the cache was destroyed and not pilfered back into the black market. And so it has reaffirmed a commitment to protect the irreplaceable wildlife in Kenya. President Uhuru Kenyatta, who was joined by other African leaders and foreign officials, has demanded a total ban on the ivory trade to protect the future of wild elephants on the continent.</p>
+        <p>With this act, Kenya has demonstrated to the world at large that the cache was destroyed and not pilfered back into the black market. This decision has reaffirmed a commitment to protect the irreplaceable wildlife in Kenya. President Uhuru Kenyatta, who was joined by other African leaders and foreign officials, has demanded a total ban on the ivory trade to protect the future of wild elephants on the continent.</p>
 
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/2016.kenya.ivory-burn.jpg" />
-      <p class="text-right gutter-side"><em>Kenya Ivory Burn, 2016</em></p>
+      <p class="text-right gutter-side">&lsquo;Ivory Burn&rsquo;, Kenya, 2016</p>
 
       <div>
-        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi said, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chairman and renowned paleoanthropologist and conservationist Richard Leakey said the burning of the ivory should encourage African countries to support a ban on ivory trade: "We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory". Kenyatta said that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
+        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi said, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chairman and renowned paleoanthropologist and conservationist, Richard Leakey, said the burning of the ivory should encourage African countries to support a ban on ivory trade: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta said that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
       </div>
 
       <div class="color quote">
@@ -81,9 +83,9 @@
         <p class="linebreak">Kenyatta wants to make the point very clear that ivory should not have any commercial value. Before igniting the first pyre, Kenyatta made the statement:</p>
 
         <div>
-          <p>&ldquo;The height of the pile of ivory before us marks the strength of our resolve.&rdquo;</p>
+          <p><b class="color">&ldquo;</b>The height of the pile of ivory before us marks the strength of our resolve.<b class="color">&rdquo;</b></p>
 
-          <p class="linebreak">&ldquo;No-one, and I repeat no-one, has any business in trading in ivory, for this trade means death of our elephants and death of our natural heritage.&rdquo;</p>
+          <p class="linebreak"><b class="color">&ldquo;</b>No-one, and I repeat no-one, has any business in trading in ivory, for this trade means death of our elephants and death of our natural heritage.<b class="color">&rdquo;</b></p>
 
         </div>
 
