--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -349,7 +351,7 @@
         <p>In this first year following Kiasa at the Nursery, in April 2018, Dame Daphne Sheldrick passed away at the age of 83. Angela Sheldrick now carries on the organization in the name of both her parents, Daphne and David. Angela had effectively taken on this leadership role in the early 2000s, and had since become the voice of the organization, in particular the Orphans' Project, through her water color paintings of baby elephants. The water color paintings of Angela Sheldrick are a lovely reflection of the care provided at the nursery. Angela addressed the Trust in remembrance of the life and legacy of her mother:</p>
 
         <div class="clear-bottom">
-          <p>&ldquo;Daphne touched countless lives&mdash;from generations of elephants who are thriving today through her trailblazing conservation work, to people all over the world who drew inspiration from her. She is testament to the difference that a single person can make, and her legacy lives on as we continue to protect and preserve wildlife in her memory. [&hellip;] Through her autobiography (An African Love Story - Love, Life and Elephants), other books, articles, lectures and television appearances, Daphne has promoted wildlife conservation worldwide.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>]</sup></p>
+          <p><b class="color">&ldquo;</b>Daphne touched countless lives&mdash;from generations of elephants who are thriving today through her trailblazing conservation work, to people all over the world who drew inspiration from her. She is testament to the difference that a single person can make, and her legacy lives on as we continue to protect and preserve wildlife in her memory. [&hellip;] Through her autobiography (An African Love Story - Love, Life and Elephants), other books, articles, lectures and television appearances, Daphne has promoted wildlife conservation worldwide.<b class="color">&rdquo;</b><sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>]</sup></p>
         </div>
 
       </div>
