--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -67,7 +69,7 @@
       </div>
 
       <div>
-        <p>In this way, elephants create waterholes &ndash; upon which many other animals rely &ndash; to survive the dry season.<sup>[<a class="button" onclick="fn_1();" title="Shoshani. pp. 226-229.">1</a>]</sup></p>
+        <p>In this way, elephants create waterholes &ndash; upon which many other animals rely &ndash; to survive the dry season.</p>
       </div>
 
       <div class="clear">
@@ -136,7 +138,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>After 146 years, Ringling Brothers has shut down. Sad news for circus fans, but great news for employers looking to snap up guys who know how to beat elephants with steel rods.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Norm MacDonald</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>After 146 years, Ringling Brothers has shut down. Sad news for circus fans, but great news for employers looking to snap up guys who know how to beat elephants with steel rods.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Norm MacDonald, 2017</font></h4>
       </div>
 
       <div class="clear">
