--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -13,14 +13,14 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -83,7 +83,7 @@
       </div>
 
       <img class="trim" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
-      <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015) Dane Aleksander</p>
+      <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015)</p>
 
       <!-- <div>
         <p><em>One more thing.</em></p>
