--- a/scene/one/reference-2/index.html
+++ b/scene/one/reference-2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -98,21 +100,9 @@
         <p>Several individual artists known to have inspired Disney animation have also been referenced in the making of <em>White Elephant</em>. In particular, I looked at the sequential photographs of animal locomotion by Eadweard Muybridge (1830-1904), who pioneered the photographic study of the motion of animals. I was also inspired by the drawings of Heinrich Kley (1863-1945), who provided a unique interpretation of animals in unusual poses. Kley's drawings had a clear influence on Walt Disney's &ldquo;Dance of the Hours&rdquo; in <em>Fantasia</em> (1940). His drawings of dancing and skating elephants have in part informed the more complex sequences of character animation in <em>White Elephant</em>. The ability to visualize character anatomy in its stretched states was key to my realizing the armature and silhouette of an animated elephant across its range of motion.<sup>&nbsp;[<a class="button" onclick="fn();" title="NGA">3</a>]</sup></p>
       </div>
 
-      <div class="clear diptych">
-
-        <div class="clear">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/art/kley-elephant-dance.jpg" />
-          <p class="text-right gutter-side"><em>The Drawings of Heinrich Kley</em> (1909, republished 1961), 52.</p>
-
-        </div>
-
-        <div class="clear">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/art/amnh-africanhall.jpg" />
-          <p class="text-right gutter-side">African Hall, American Museum of Natural History</p>
-
-          <!-- [amng.org] -->
-
-        </div>
+      <div class="clear">
+        <img alt="" src="https://animathabitat.com/inc/img/~01/art/kley-elephant-dance.jpg" />
+        <p class="text-right gutter-side"><em>The Drawings of Heinrich Kley</em> (1909, republished 1961), 52.</p>
 
       </div>
 
