--- a/scene/one/technology-documentary-big-tuskers/index.html
+++ b/scene/one/technology-documentary-big-tuskers/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src lifeasplay.ca 'self'; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; img-src lifeasplay.ca 'self'; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -13,14 +13,16 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#222; }
+  </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -46,7 +48,7 @@
       </div>
 
       <img alt="Last of the Big Tuskers title" src="https://danealeksander.github.io/inc/img/copy/umboko-productions/lotbt-cover-1.4.spot.header.jpg" />
-      <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> cover art &copy; Umboko Productions</p>
+      <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> cover art &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
 
       <div>
         <h3>Last of the Big Tuskers (2018)</h3>
@@ -57,7 +59,7 @@
         <p class="linebreak">These elephant bulls, called askaris, follow in the footsteps of a patriarch&mdash;a biggest bull elephant, likely with the biggest tusks, in the area. The increasingly few elephants with tusks estimated in excess of one-hundred pounds per tusk are known as <em>super-tuskers</em>. This film explains that the tusks of bull elephants grow at an accelerated rate when the bull is coming of age. When an elephant with the genetic makeup for big tusks has just reached the physical maturity of a <em>super-tusker</em>, that elephant becomes a prime target for poaching at the same time as that same elephant has just reached prime age for breeding. In the populations that remain of elephants in the wild, the result is that the genetic makeup for big tusks is artificially devolved.</p>
 
         <!-- <div class="color quote">
-          <p><font class="color">&ldquo;</font>They're called askaris, and do what most young groups of men do: hang out, chase girls, and test their strength and wits against each other and the world. The older male becomes the father figure they never had in the matriarchal herd, teaching them masculine ethicat as well as more practical matters of survival in the wild, such as where their best watering holes and most succulent branches and berries are. These geography lessons they never forget. Hence the cliche about elephant's long memories. In return, the ascaris treat their father figure with utmost respect and affection. When he is too old to strip the bark off branches, they escort him to marshes or swamps where the leaves are softer. For elephants do not die gracefully of old age, they starve to death after they lose their sixth set of teeth, and when their leader is too weak to stand, and dementia sets in, the ascaris sometimes even guard him, as he sags, preventing hyenas and lions from attacking him. Even when he dies, the ascaris has been know to chase the scavengers off the carcass. After he is gone, they will visit his bones for as long as they are there, paying respect to a fallen leader. The fact that almost all elephants, which perish naturally, do so in the soft-food wetlands has lead to the myth of secret graveyards and ivory troves where elephants instinctively migrate to die. The truth is, they all usually die in the last areas where the food is soft enough to ingest.<font class="color">&rdquo;</font></p>
+          <p><b class="color">&ldquo;</b>They're called askaris, and do what most young groups of men do: hang out, chase girls, and test their strength and wits against each other and the world. The older male becomes the father figure they never had in the matriarchal herd, teaching them masculine ethicat as well as more practical matters of survival in the wild, such as where their best watering holes and most succulent branches and berries are. These geography lessons they never forget. Hence the cliche about elephant's long memories. In return, the ascaris treat their father figure with utmost respect and affection. When he is too old to strip the bark off branches, they escort him to marshes or swamps where the leaves are softer. For elephants do not die gracefully of old age, they starve to death after they lose their sixth set of teeth, and when their leader is too weak to stand, and dementia sets in, the ascaris sometimes even guard him, as he sags, preventing hyenas and lions from attacking him. Even when he dies, the ascaris has been know to chase the scavengers off the carcass. After he is gone, they will visit his bones for as long as they are there, paying respect to a fallen leader. The fact that almost all elephants, which perish naturally, do so in the soft-food wetlands has lead to the myth of secret graveyards and ivory troves where elephants instinctively migrate to die. The truth is, they all usually die in the last areas where the food is soft enough to ingest.<b class="color">&rdquo;</b></p>
 
           <p class="linebreak"><font class="color">&ldquo;</font>This is why those who hunt old bulls don't, or refuse to, understand the harm they're doing. An aging elephant male is not something surplus to be dispatched by some meager trophy gatherer. He is a breathing reference library. He's there for the health and well-being of future elephants. He teaches youngster who they are and imparts priceless bush skills to succeeding generations.<font class="color">&rdquo; &mdash;&nbsp;Lawrence Anthony, <em>The Elephant Whisperer: My Life with the Herd in the African Wild</em> (2009)</font></p>
 
@@ -67,22 +69,23 @@
 
         <p class="linebreak">Tusks are more than an indication of social stature for elephants. Elephants need their tusks to survive: to forage, to dig for roots, to dig for water, to strip bark from trees, to topple trees, to defend themselves. Elephant bulls use their tusks in combat for access to females in estrus. The film emphasizes the role of older bull elephants, who have become the father figures that young askaris have not had in the matriarchal herd. Old bulls show the ways to water and to survive the challenging landscapes, as well as teach discipline to the young bachelors.</p>
 
-        <p class="linebreak">Far too often and for too long, elephants have been poached for their ivory tusks. For the few years leading up to this film, on average, almost one hundred elephants have been killed every day. Every dead elephant is a tragedy for a family-based herd and increasingly for the survival of the highly-intelligent species. The hope for this project is to share the value in keeping elephants alive, in particular big tuskers.</p>
+        <p class="linebreak">Far too often, and for too long, elephants have been poached for their ivory tusks. For the few years leading up to this film, on average, almost one hundred elephants have been killed every day. Every dead elephant is a tragedy for a family-based herd and increasingly for the survival of the highly-intelligent species. The hope for this project is to share the value in keeping elephants alive, in particular big tuskers.</p>
 
-        <p class="linebreak">Every now and then, people become evermore desensitized to the ways in which we take advantage of nature, wild or otherwise. This is known as a baseline shift&mdash;a baseline that represents what we think of as normal, which changes with every generation. Enter: director and on-camera co-host of <em>Last of the Big Tuskers</em>, James Currie, who grew up in South Africa, and who returns in this film to see the <em>last</em> big tuskers in <a href="../../../url/git/bigtuskers-tembe-tusker-foundation/" title="Last of the Big Tuskers / Tembe Elephant Park" target="_blank">Tembe Elephant Park</a>.</p>
+        <p class="linebreak">Every now and then&hellip; Everyday, people become evermore desensitized to the ways in which we take advantage of nature, wild or otherwise. This is known as a baseline shift&mdash;a baseline that represents what we think of as normal, which changes with every generation. Enter: director and on-camera co-host of <em>Last of the Big Tuskers</em>, James Currie, who grew up in South Africa, and who returns in this film to see the <em>last</em> big tuskers in <a href="../../../url/git/bigtuskers-tembe-tusker-foundation/" title="Last of the Big Tuskers / Tembe Elephant Park" target="_blank">Tembe Elephant Park</a>.</p>
 
         <p class="linebreak">Tembe Elephant Park, South Africa, has a unique topography: <em>sandforest</em>. This special sandforest shares a border with Mozambique and holds an elephant population with very special characteristics, as Alois Haberhauer, Elephant Geneticist at the University of Kriel, described in the film: &ldquo;a special genetic makeup to produce strong tuskers.&rdquo; Leonard Muller, Elephant Monitor at Ezemvelo KZN Wildlife, also in the film explained the special circumstances for the elephants in Tembe:</p>
 
         <div>
-          <p>&ldquo;From a genetics standpoint [the elephants in Tembe] are quite gifted, [though this has a lot to do] with the history of the area[,] that this must have been a very difficult area to hunt in the peak of the ivory trade, so that would have left a lot of these bulls alone[.] [The elephants in Tembe] were not hunted back then for their ivory. [As a result, there are] a lot more tuskers [per population size in Tembe] than anywhere in South Africa. Even [compared] to a place like [Tsavo National Park], which is a massive park with lots of elephants, they only have a handful of tuskers [per population size.] [This is] something quite special for Tembe.&rdquo;</p>
+          <p><b class="color">&ldquo;</b>From a genetics standpoint [the elephants in Tembe] are quite gifted. Actually, it has a lot to do with the history of the area as well—that this must have been a very difficult area to hunt in the peak of the ivory trade so that would have left a lot of these bulls alone—that they were not hunted back then for their ivory. Tembe has got a lot more tuskers than anywhere in South Africa per population size. Even if you compare to a place like Tsavo, which is a massive park with lots of elephants, they only have a handful of tuskers [per population size]. So that is something quite special for Tembe.<b class="color">&rdquo;</b></p>
 
         </div>
 
-        <p>The adventure with James Currie and with co-host in the film, and senior ranger at Tembe Elephant Park, Tom Mahamba travels to Kruger National Park, also in South Africa, then on to Kenya to compare the elephants of other national parks: Amboseli, Chyulu Hills, Tsavo, to the last big tuskers of Tembe. The direction of the film remains centred on challenges facing elephant conservation today, pointing to tourism as a solution: managing the revenue from tourism to support the national parks as well as the communities who continue to co-exist on the front lines of a conflict with elephants. The same elephants that people all over the world &ndash; everyone, everywhere &ndash; so clearly uphold in story and in art.</p>
+        <p>James Currie and co-host Tom Mahamba, then a senior ranger at Tembe Elephant Park, travel to Kruger National Park in South Africa and then on to Kenya to compare the elephants of other national parks: Amboseli, Chyulu Hills, Tsavo, to the last big tuskers of Tembe. The direction of the film remains centred on challenges facing elephant conservation today, pointing to tourism as a solution: managing the revenue from tourism to support the national parks as well as the communities who continue to co-exist on the front lines of a conflict with elephants. The same elephants that people all over the world &ndash; everyone, everywhere &ndash; so clearly uphold in story and in art.</p>
+
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>There is mystery behind that masked gray visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <em>The Tree Where Man Was Born</em> (1972)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>There is mystery behind that masked grey visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <em>The Tree Where Man Was Born</em> (1972)</font></h4>
       </div>
 
       <div class="clear">
