--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -13,17 +13,17 @@
 
   <title>Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.</title>
 
+  <style>
+    html { background-color: #111; }
+
+  </style>
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../inc/ico/oafa.mark.1.1.72.two.png" />
-
-  <style>
-    html { background-color: #111; }
-
-  </style>
 
 </head>
 
@@ -265,6 +265,9 @@
   <section class="single">
     <article>
       <div class="quote">
+
+        <!-- <h3><a href="siberian-tiger-print/"><font class="scene-two">Siberian Tiger Print</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <h3><a href="the-beginning-of-exhibition/"><font class="scene-two">The Beginning of Exhibition</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
