--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -16,6 +16,8 @@
   <style>
     html { background-color:#111; }
   </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -52,17 +54,17 @@
       <div class="clear-bottom desktop-feature">
         <div class="clear ptych-center triptych ptych-fixed">
           <div class="clear-left ptych-left ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/art/rodchenko/1921.rodchenko.the-end-of-painting.1.jpg" />
+            <img alt="" src="https://animathabitat.com/inc/img/~02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.1.jpg" />
 
           </div>
 
           <div class="clear-center ptych-center ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/art/rodchenko/1921.rodchenko.the-end-of-painting.2.jpg" />
+            <img alt="" src="https://animathabitat.com/inc/img/~02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.2.jpg" />
 
           </div>
 
           <div class="clear-right ptych-right ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/art/rodchenko/1921.rodchenko.the-end-of-painting.3.jpg" />
+            <img alt="" src="https://animathabitat.com/inc/img/~02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.3.jpg" />
 
           </div>
 
@@ -82,7 +84,7 @@
       </div>
 
       <div class="color quote text">
-        <h4><font class="color">&ldquo;</font><em>Basic colors. Every plane is a plane and there is to be no representation.</em><font class="color">&rdquo;</font><font class="thin"> &mdash;&nbsp;Aleksandr Rodchenko</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Basic colors. Every plane is a plane and there is to be no representation.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Aleksandr Rodchenko</font></h4>
 
       </div>
 
