--- a/scene/two/the-second-chapter/index.html
+++ b/scene/two/the-second-chapter/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -16,6 +16,8 @@
   <style>
     html { background-color:#111; }
   </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -74,17 +76,17 @@
       <div>
         <p>Tagir Safayev &ndash; Russian graphic designer and type developer &ndash; worked at ParaType from 1991 until 2003. Safayev designed and developed more than one hundred fonts, of note of course the Cyrillic font ITC <em>Stenberg</em> (1997) and its initial stencil font <em>Rodchenko</em> (1996-2002). In 1995, Tagir Safayev received the Rodchenko Award of the Society of Designers of Russia for <em>Rodchenko</em> (typeface, 1996-2002). Today, Tagir Safayev is a staff designer at ParaType in Moscow.<sup>&nbsp;[<a class="button" onclick="fn();" title="Luc Devroye">4</a>]</sup></p>
 
-        <div class="clear">
+      </div>
 
-          <div class="quote" id="footnotes">
-            <p class="small"><sup>1</sup> ParaType. About us. <a href="../../../url/com/paratype/" title="ParaType" target="_blank" rel="noopener">Website Link</a></p>
-            <p class="small"><sup>2</sup> ParaType. Fonts. ITC Stenberg. (1997) <a href="../../../url/com/paratype-itc-stenberg/" title="ParaType / Fonts / ITC Stenberg" target="_blank" rel="noopener">Website Link</a></p>
-            <p class="small"><sup>3</sup> ParaType. Fonts. Rodchenko. (1996-2002) <a href="../../../url/com/paratype-rodchenko/" title="ParaType / Fonts / Rodchenko" target="_blank" rel="noopener">Website Link</a></p>
-            <p class="small"><sup>4</sup> Luc Devroye, School of Computer Science, McGill University, Montreal, Canada. Type design information page. Tagir Safayev. <a href="../../../url/www/luc-devroye-fonts-rodchenko/" title="Devroye / Fonts / Rodchenko" target="_blank" rel="noopener">Website Link</a></p>
+      <div class="clear">
 
-          </div>
+        <div class="quote" id="footnotes">
+          <p class="small"><sup>1</sup> ParaType. About us. <a href="../../../url/com/paratype/" title="ParaType" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>2</sup> ParaType. Fonts. ITC Stenberg. (1997) <a href="../../../url/com/paratype-itc-stenberg/" title="ParaType / Fonts / ITC Stenberg" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>3</sup> ParaType. Fonts. Rodchenko. (1996-2002) <a href="../../../url/com/paratype-rodchenko/" title="ParaType / Fonts / Rodchenko" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>4</sup> Luc Devroye, School of Computer Science, McGill University, Montreal, Canada. Type design information page. Tagir Safayev. <a href="../../../url/www/luc-devroye-fonts-rodchenko/" title="Devroye / Fonts / Rodchenko" target="_blank" rel="noopener">Website Link</a></p>
+
         </div>
-
       </div>
 
       <div class="clear polyptych">
