--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -13,17 +13,17 @@
 
   <title>Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&egrave;ro.</title>
 
+  <style>
+    html { background-color: #333; }
+
+  </style>
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../inc/ico/oafa.mark.1.1.72.light.png" />
-
-  <style>
-    html { background-color: #333; }
-
-  </style>
 
 </head>
 
@@ -132,8 +132,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><em>Do not speak of a rhinoceros if there is no tree nearby.</em><font class="thin"> &mdash;&nbsp;Zulu proverb</h4>
-        <h4><font class="fr thin"><em>Ne parlez pas de rhinoc&eacute;ros s'il n'y a pas d'arbre &agrave; proximit&eacute;.</em> &mdash;&nbsp;proverbe zoulou</font></h4>
+        <h4><em>Do not speak of a rhinoceros if there is no tree nearby.</em><font class="fr thin">&nbsp;&#92;&nbsp;<em>Ne parlez pas de rhinoc&eacute;ros s'il n'y a pas d'arbre &agrave; proximit&eacute;.</em></font><br><font class="color small thin">&mdash;&nbsp;Zulu proverb</font><font class="fr small thin">&nbsp;&#92;&nbsp;proverbe zoulou</font></h4>
 
       </div>
     </section>
