--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src animathabitat.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -16,6 +16,8 @@
   <style>
     html { background-color:#333; }
   </style>
+
+  <link rel="preconnect" href="https://animathabitat.com" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -114,7 +116,7 @@
       </div>
 
       <div>
-        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. <em>They are the terminus of a lineage that split-off millions of years ago.</em></p>
+        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. <em>They are the terminus of a lineage that split-off hundreds of thousands of years ago.</em></p>
 
         <!-- E.O. Wilson, Journal: The Biological Diversity Crisis (1985) -->
 
