--- a/princeps/index.html
+++ b/princeps/index.html
@@ -13,15 +13,15 @@
 
   <title>Animat Habitat princeps.</title>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
-
-  <link rel="icon" href="../inc/ico/oafa.mark.1.1.72.light.png" />
-
   <style>
     html { background-color:#333; }
 
   </style>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
+  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
+
+  <link rel="icon" href="../inc/ico/oafa.mark.1.1.72.light.png" />
 
 </head>
 
@@ -223,7 +223,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <p>Robert McLellan Bateman, CM, naturalist and artist, <a href="../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a>.</p>
+              <p>Robert (Bob) McLellan Bateman, CM, naturalist and artist, <a href="../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a>.</p>
               <p>Recognized for his artwork to conserve nature in Canada.</p>
               <p><font class="fr">Reconnu pour ses &oelig;uvres visant &agrave; pr&eacute;server la nature au Canada.</font></p>
 
