--- a/scene/two/the-beginning-of-exhibition/index.html
+++ b/scene/two/the-beginning-of-exhibition/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -52,7 +52,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../the-forest-behind-the-trees/" rel="prev"><font class="mobile">/ Prev Article</font><font class="desktop">/ The Forest Behind the Trees</font></a>
-          <!-- <a class="nav-next" href="../exhibition/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Beginning of Exhibition</font></a> -->
+          <!-- <a class="nav-next" href="../siberian-tiger-print/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Siberian Tiger Print</font></a> -->
         </div>
       </div>
 
@@ -68,26 +68,5 @@
   </footer>
 
 </body>
-
-<script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
-
-<script>
-  var register_form = document.getElementById( "register" ),
-      register_toggle = document.getElementById( "register-toggle" );
-
-  register_form.style.display = "none";
-
-  function toggle_register() {
-    if (register_form.style.display == "none") {
-      register_form.style.display = "block";
-      register_toggle.style.display = "none";
-    }
-    else {
-      register_form.style.display = "none";
-      register_toggle.style.display = "block";
-    }
-  };
-
-</script>
 
 </html>
