--- a/scene/two/the-forest-behind-the-trees/index.html
+++ b/scene/two/the-forest-behind-the-trees/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,6 +17,8 @@
     html { background-color:#111; }
   </style>
 
+  <link rel="preconnect" href="https://animathabitat.com" />
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
@@ -30,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-two logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb btn scene-two"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
-      <li class="crumb scene scene-two"><a><em>Behind the Trees</em></a></li>
+      <li class="crumb scene scene-two"><a><em>The Forest, The Trees</em></a></li>
     </ul>
   </nav>
 
@@ -68,26 +70,5 @@
   </footer>
 
 </body>
-
-<script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
-
-<script>
-  var register_form = document.getElementById( "register" ),
-      register_toggle = document.getElementById( "register-toggle" );
-
-  register_form.style.display = "none";
-
-  function toggle_register() {
-    if (register_form.style.display == "none") {
-      register_form.style.display = "block";
-      register_toggle.style.display = "none";
-    }
-    else {
-      register_form.style.display = "none";
-      register_toggle.style.display = "block";
-    }
-  };
-
-</script>
 
 </html>
